--- a/lab1/app/templates/unit_page.html
+++ b/lab1/app/templates/unit_page.html
@@ -19,7 +19,7 @@
                     <span>{{ unit.description | linebreaksbr }}</span>
                 {% endautoescape %}
 
-                <a href="/" class="btn btn-primary my-4 w-25">
+                <a href="/" class="btn btn-primary my-4 w-25 return-btn">
                     Домой
                 </a>
 
