--- a/lab1/app/static/css/main.css
+++ b/lab1/app/static/css/main.css
@@ -1,32 +1,62 @@
 :root {
-    --bg: #fff;
-    --card-bg: #F9F9F9;
-    --card-border-color: rgba(0, 0, 0, .125);
-    --color: #000;
+    --root_bg: #fff;
+    --text_color: #000;
+    --primary-color: #0d6efd;
+    --primary-color__hover: hsl(from var(--primary-color) h s calc(l - 10));
+
     --header-bg: #303030;
     --header-color: #fff;
+
+    --card-bg: #fff;
+    --card-border-color: #ced4da;
+    --card-text: #000;
+
+    --primary-btn-bg: var(--primary-color);
+    --primary-btn-bg--hover: var(--primary-color__hover);
+    --primary-btn-border: var(--primary-color);
+    --primary-btn-border--hover: var(--primary-color__hover);
     --primary-btn-color: #fff;
-    --primary-btn-bg: #0d6efd;
+    --primary-btn-color--hover: #fff;
+
+    --bin-bg: var(--primary-color);
+    --bin-bg--hover: var(--primary-color__hover);
+    --bin-border: var(--primary-color);
+    --bin-border--hover: var(--primary-color__hover);
+    --bin-color: #fff;
+    --bin-color--hover: #fff;
+
+    --badge-bg: var(--primary-color);
+    --badge-bg--hover: var(--primary-color__hover);
     --badge-color: #fff;
-    --badge-bg: var(--primary-btn-bg)
+    --badge-color--hover: #fff;
+
+    --search-bg: var(--primary-color);
+    --search-bg--hover: var(--primary-color__hover);
+    --search-border: var(--primary-color);
+    --search-border--hover: var(--primary-color__hover);
+    --search-color: #fff;
+    --search-color--hover: #fff;
+
+    --return-bg: var(--primary-color);
+    --return-bg--hover: var(--primary-color__hover);
+    --return-border: var(--primary-color);
+    --return-border--hover: var(--primary-color__hover);
+    --return-color: #fff;
+    --return-color--hover: #fff;
 }
 
 .wrapper {
-    background: var(--bg);
+    color: var(--text_color);
+    background: var(--root_bg);
     min-height: 100vh;
-    color: var(--color);
 }
 
 .navbar {
     background-color: var(--header-bg);
 }
 
-.nav-link, .navbar-brand{
+.navbar-brand{
     color: var(--header-color) !important;
-}
-
-.nav-link:hover, .navbar-brand:hover{
-    color: hsl(from var(--header-color) h s calc(l - 10)) !important;
 }
 
 .navbar .title {
@@ -45,6 +75,7 @@
 .cards-wrapper .card {
     background: var(--card-bg);
     border: 1px solid var(--card-border-color);
+    color: var(--card-text);
     border-radius: 16px;
 }
 
@@ -82,16 +113,18 @@ main {
     padding: 25px 0;
 }
 
-.bin {
-    position: relative !important;
-}
-
 .badge {
     position: absolute !important;
     top: -10px !important;
     right: -15px;
     color: var(--badge-color) !important;
     background-color: var(--badge-bg) !important;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.bin.btn.btn-primary:hover .badge {
+    background-color: var(--badge-bg--hover) !important;
+    color: var(--badge-color--hover) !important;
 }
 
 .justify-end {
@@ -124,4 +157,54 @@ main {
 
 .card-btns .btn {
     width: 50%;
+}
+
+.search-btn.btn.btn-primary {
+    background-color: var(--search-bg) !important;
+    border-color: var(--search-border) !important;
+    color: var(--search-color) !important;
+}
+
+.search-btn.btn.btn-primary:hover {
+    background-color: var(--search-bg--hover) !important;
+    border-color: var(--search-border--hover) !important;
+    color: var(--search-color--hover) !important;
+}
+
+.return-btn.btn.btn-primary {
+    background-color: var(--return-bg) !important;
+    border-color: var(--return-border) !important;
+    color: var(--return-color) !important;
+}
+
+.return-btn.btn.btn-primary:hover {
+    background-color: var(--return-bg--hover) !important;
+    border-color: var(--return-border--hover) !important;
+    color: var(--return-color--hover) !important;
+}
+
+.btn.btn-primary {
+    position: relative !important;
+    background-color: var(--primary-btn-bg) !important;
+    border-color: var(--primary-btn-border) !important;
+    color: var(--primary-btn-color) !important;
+}
+
+.btn.btn-primary:hover {
+    background-color: var(--primary-btn-bg--hover) !important;
+    border-color: var(--primary-btn-border--hover) !important;
+    color: var(--primary-btn-color--hover) !important;
+}
+
+.bin.btn.btn-primary {
+    position: relative !important;
+    background-color: var(--bin-bg) !important;
+    border-color: var(--bin-border) !important;
+    color: var(--bin-color) !important;
+}
+
+.bin.btn.btn-primary:hover  {
+    background-color: var(--bin-bg--hover) !important;
+    border-color: var(--bin-border--hover) !important;
+    color: var(--bin-color--hover) !important;
 }
